--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+coverage==4.4.2
 Cython==0.27.3
 Django==2.0.1
 -e git://github.com/kmmbvnr/django-jenkins.git@f673c8ecded24eb56aeaef8d1c0caeb82208b595#egg=django_jenkins
